--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,10 @@
         android:layout_height="wrap_content"
         android:text="Hello Gabe!"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello Seth!"
+        />
 
 </LinearLayout>
